Fix image sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ li img {
 }
 
 .game-cover {
-  max-width: 450px;
+  max-width: 250px;
 }
 
 .game-data {
